@@ -43,6 +43,19 @@
                     android:indeterminateOnly="true" />
             </LinearLayout>
 
+            <LinearLayout android:id="@+id/no_content"
+                android:orientation="vertical"
+                android:layout_height="fill_parent"
+                android:layout_width="fill_parent"
+                android:gravity="center"
+                android:visibility="gone">
+
+                <com.klinker.android.twitter.manipulations.widgets.HoloTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_content"/>
+            </LinearLayout>
+
 
             <org.lucasr.smoothie.AsyncListView
                 xmlns:android="http://schemas.android.com/apk/res/android"
